--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ApiRest</title>
 </head>
 <body>
-    
+
+
 </body>
 </html>
