--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,10 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ApiRest</title>
+    <title>Document</title>
 </head>
 <body>
-
-
+    <h1>hola express</h1>
 </body>
 </html>
