--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,18 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola express</h1>
+
+    <h2>Formulario</h2>
+
+    <form action="/products" method="POST">
+        <input type="number" id="id" name="id" title="id">
+        <input type="text" id="title" name="title" title="title">
+        <input type="text" id="description" name="description" title="description">
+        <input type="number" id="price" name="price" title="price">
+        <input type="text" id="thumbnail" name="thumbnail" title="thumbnail">
+        <input type="text" id="code" name="code" title="code">
+        <input type="number" id ="stock" name="stock" title="stock">
+        <input type="submit" value="enviar">
+    </form>
 </body>
 </html>
