problema con ruta de archivos json

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Api</title>
 </head>
 <body>
 
     <h2>Formulario</h2>
 
-    <form action="/products" method="POST">
+    <form action="/api/products" method="POST">
         <input type="number" id="id" name="id" title="id">
         <input type="text" id="title" name="title" title="title">
         <input type="text" id="description" name="description" title="description">
@@ -17,6 +17,8 @@
         <input type="text" id="code" name="code" title="code">
         <input type="number" id ="stock" name="stock" title="stock">
         <input type="submit" value="enviar">
+
+        <button type="button" id="loadProducts">Cargar Productos</button>
     </form>
 </body>
 </html>
