errores al obtener las vistas

--- a/src/public/img/index.html
+++ b/src/public/img/index.html
@@ -8,7 +8,7 @@
 
     <h2>Formulario</h2>
 
-    <form action="/api/products" method="POST">
+    <!-- <form action="/api/products" method="POST">
         <input type="number" id="id" name="id" title="id">
         <input type="text" id="title" name="title" title="title">
         <input type="text" id="description" name="description" title="description">
@@ -19,6 +19,6 @@
         <input type="submit" value="enviar">
 
         <button type="button" id="loadProducts">Cargar Productos</button>
-    </form>
+    </form> -->
 </body>
 </html>
